# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: .flake8  app.py  logger.py  messages.py  utils.py
page_analyzer/database/: __init__.py  db.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
