[project]
name = "hexlet-code"
version = "0.1.0"
description = "page_analyzer"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "flask",
    "gunicorn",
    "python-dotenv",
    "psycopg2-binary",
    "requests",
    "beautifulsoup4>=4.12.3"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"