[project]
name = "hexlet-code"
version = "0.1.0"
description = "page_analyzer"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "flask",
    "gunicorn",
    "python-dotenv",
    "psycopg2-binary",
    "requests",
    "beautifulsoup4>=4.12.3"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 88
ignore = "E203, E266, E501, W503"
exclude = ".venv, __pycache__, .git, .github"

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest"
]